--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -25,7 +26,11 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>add notes here</li>
+          <li>You have to link your css style sheet to the html code between the meta data and title</li>
+          <li>in CSS there is a selector, and declaration block consisting of multiple declarations which consist of a property and a value </li>
+          <li>You can combine 2 selectors by seperating them with a comma, this is called DRY code</li>
+          <li>A margin indicates how much space we want around the outside of an element</li>
+          <li>A padding indicates how much space we want around the content inside an element</li>
         </ul>
       </section>
    
