Added JS functions and completed console logs

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -49,7 +49,10 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>add notes here</li>
+          <li>Link JavaScript to HTML below the footer and above the closing element for body</li>
+          <li>A variable is a named container that allows us to store data in our code</li>
+          <li>an array is a named container of variables that can be used to shorten code</li>
+          <li>Control flow is the order in which a computer executes code in a script</li>
         </ul>
       </section>
     </main>
